--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "tailwindcss": "^3.1.6"
   },
   "devDependencies": {
+    "@bysir/hollow": "^1.0.9",
     "@types/react": "^18.0.21",
     "esbuild-style-plugin": "^1.6.1"
   },
-  "browserslist": [">0.01%"]
+  "browserslist": [
+    ">0.01%"
+  ]
 }
